# mqtt-iot-yocto-qemu

./: .gitignore  README.md
app/: CMakeLists.txt
app/include/mqtt/: Publisher.hpp  Subscriber.hpp
app/src/: Publisher.cpp  Subscriber.cpp  main_publisher.cpp  main_subscriber.cpp
meta-iot/conf/: layer.conf
meta-iot/recipes-iot/dropbear/: dropbear.service
meta-iot/recipes-iot/dropbear/files/: dropbear_%.bbappend
meta-iot/recipes-iot/mqtt-iot/: mqtt-iot_0.1.bb
meta-iot/recipes-iot/mqtt-iot/files/: LICENSE
